# Fog-Computing

./: README.md  install_dependencies.sh
data/log_2_random/0/: coord_10.0.0.4:50051.txt  rtt_10.0.0.4:50051-10.0.0.5:50052.txt
data/log_2_random/1/: coord_10.0.0.5:50052.txt  rtt_10.0.0.5:50052-10.0.0.4:50051.txt
data/log_2_static_3_random/0/: coord_10.0.0.4:50051.txt  rtt_10.0.0.4:50051-10.0.0.5:50052.txt  rtt_10.0.0.4:50051-10.0.0.6:50053.txt  rtt_10.0.0.4:50051-10.0.0.7:50054.txt  rtt_10.0.0.4:50051-10.0.0.8:50055.txt
data/log_2_static_3_random/1/: coord_10.0.0.5:50052.txt  rtt_10.0.0.5:50052-10.0.0.4:50051.txt  rtt_10.0.0.5:50052-10.0.0.6:50053.txt  rtt_10.0.0.5:50052-10.0.0.7:50054.txt  rtt_10.0.0.5:50052-10.0.0.8:50055.txt
data/log_2_static_3_random/2/: coord_10.0.0.6:50053.txt  rtt_10.0.0.6:50053-10.0.0.4:50051.txt  rtt_10.0.0.6:50053-10.0.0.5:50052.txt  rtt_10.0.0.6:50053-10.0.0.7:50054.txt  rtt_10.0.0.6:50053-10.0.0.8:50055.txt
data/log_2_static_3_random/3/: coord_10.0.0.7:50054.txt  rtt_10.0.0.7:50054-10.0.0.4:50051.txt  rtt_10.0.0.7:50054-10.0.0.5:50052.txt  rtt_10.0.0.7:50054-10.0.0.6:50053.txt  rtt_10.0.0.7:50054-10.0.0.8:50055.txt
data/log_2_static_3_random/4/: coord_10.0.0.8:50055.txt  rtt_10.0.0.8:50055-10.0.0.4:50051.txt  (+3 more)
gmock_sample/: gmock_vivaldi.cpp
src/: CMakeLists.txt  actual_local.py  centralRepo.cpp  config.ini  coordinates.ini  data.py  exec_kill.py  exec_nodes.py  kill_gather.py  local_script.py  peerToPeerDealerRouter.cpp  plot_final.py  rtt_plot.py  vivaldi.cpp  vivaldi.h
src/proto/: CMakeLists.txt  vivaldi.proto
(+103 files in other folders)
